Убираю из макета числа и строки fragment_all_deals.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="highPriority">"\u203C"</string>
     <string name="lowPriority">"\u2B07"</string>
     <string name="viewAll">ViewAll</string>
+    <string name="allDealsTitle">Мои дела</string>
 </resources>
